SERVER-30246 Error if $changeNotification is sent to mongos.