jstests/aggregation/sources/changeNotification/change_notification.js
@@ -1,6 +1,4 @@
 // Basic $changeNotification tests.
-// @tags: [do_not_wrap_aggregations_in_facets]
-
 (function() {
     "use strict";
 
